<resources>
    <string name="app_name">Wabbitemu</string>
    <string name="website">http://wabbit.codeplex.com</string>
    <string name="openSourceSoftware">Notices for Open Source Software Used:</string>
    <string name="colorPickerLink"><b><a href="https://github.com/attenzione/android-ColorPickerPreference">ColorPickerPreference</a></b>\n/*\n
 * Copyright © 2011 Sergey Margaritov &amp; Daniel Nilsson\n
 *\n
 * Licensed under the Apache License, Version 2.0 (the "License");\n
 * you may not use this file except in compliance with the License.\n
 * You may obtain a copy of the License at\n
 *\n
 *      http://www.apache.org/licenses/LICENSE-2.0\n
 *\n
 * Unless required by applicable law or agreed to in writing, software\n
 * distributed under the License is distributed on an "AS IS" BASIS,\n
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
 * See the License for the specific language governing permissions and\n
 * limitations under the License.\n
 */</string>
    <string name="osVersionDescription">OS Version: </string>
    <string name="calculatorTypeDescription">What calculator type would you like to emulate?</string>
    <string name="osSelectionDescription">A calculator OS file is required to emulate TI calculators.
        How do you want to obtain an OS for Wabbitemu?</string>
    <string name="osTerms"><a href="http://education.ti.com/us/product/apps/84pos.html#show=eula">Terms</a></string>
    <string name="welcome">Welcome to Wabbitemu. This will help you get started by helping you to create a ROM image.
         A ROM image is required to run Wabbitemu. How do you want to acquire your ROM?</string>
    <string name="haveRomRadio">I already have a ROM file</string>
    <string name="helpCopyRadio">Help me copy a ROM from my calculator</string>
    <string name="helpCreateRadio">Help me create a ROM using open source software</string>
    <string name="browseOsRadio">I already have an OS</string>
    <string name="downloadOsRadio">I\'d like to download one</string>
    <string name="ti73">TI-73</string>
    <string name="ti84p">TI-84 Plus</string>
    <string name="ti83p">TI-83 Plus</string>
    <string name="ti84pse">TI-84 Plus SE</string>
    <string name="ti84pcse">TI-84 Plus C SE</string>
    <string name="ti83pse">TI-83 Plus SE</string>
</resources>