<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/calculatorTypeDescription"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/setupModelRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/ti83pRadio"
        android:orientation="vertical"
        android:padding="10dp" >

        <RadioButton
            android:id="@+id/ti73Radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti73" />

        <RadioButton
            android:id="@+id/ti83pRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti83p" />

        <RadioButton
            android:id="@+id/ti83pseRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti83pse" />

        <RadioButton
            android:id="@+id/ti84pRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti84p" />

        <RadioButton
            android:id="@+id/ti84pseRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti84pse" />

        <RadioButton
            android:id="@+id/ti84pcseRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti84pcse" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <include layout="@layout/ad" />
    </LinearLayout>

</merge>